# taters

./: .gitignore  LICENSE  README.MD  pyproject.toml
src/taters/: Taters.py
src/taters/audio/: analyze_vocal_acoustics.py  convert_to_wav.py  diarize_with_thirdparty.py  extract_wav_from_video.py  extract_whisper_embeddings.py  extract_whisper_embeddings_subproc.py  split_wav_by_speaker.py
src/taters/audio/diarizer/: whisper_diar_wrapper.py
src/taters/audio/diarizer/whisper-diarization/: diarize_custom.py  requirements.txt
src/taters/audio/diarizer/whisper-diarization/diarization/: __init__.py
src/taters/audio/diarizer/whisper-diarization/diarization/msdd/: msdd_custom.py
src/taters/helpers/: feature_gather.py  find_files.py  text_gather.py
src/taters/pipelines/: run_pipeline.py
src/taters/pipelines/presets/: conversation_video.yaml  gather-only.yaml
src/taters/text/: analyze_lexical_richness.py  analyze_readability.py  analyze_with_archetypes.py  analyze_with_dictionaries.py  extract_sentence_embeddings.py  subtitle_parser.py
src/taters/text/dictionary_analyzers/: multi_archetype_analyzer.py  multi_dict_analyzer.py
